base/vs-qa/virtualservice.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs
  namespace: vcs-eg-qa
spec:
  gateways:
    - istio-system/cluster-ingressgateway
  hosts:
    - devops.wfgmb.com
  http:
    - match:
        - uri:
            exact: /qa-sb1
      redirect:
        uri: /qa-sb1/
    - match:
        - uri:
            prefix: /qa-sb1/
      rewrite:
        uri: /
      route:
        - destination:
            host: sb1
            port:
              number: 8080
